manifests/workloads/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-backend
  namespace: app-prod
  labels:
    app.kubernetes.io/name: ops-portal
    app.kubernetes.io/part-of: indetechs-phase3
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ops-portal
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-backend
  namespace: app-prod
  labels:
    app.kubernetes.io/name: ops-portal
    app.kubernetes.io/part-of: indetechs-phase3
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ops-portal
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ops-portal
        app.kubernetes.io/part-of: indetechs-phase3
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: backend
          image: docker.io/anik50/indetechs-ops-backend:v2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
